crates/hird-check/tests/snapshots/inference__annotated_fn_signature.snap
---
source: crates/hird-check/tests/inference.rs
expression: "check_str(r\"fn add(x: Int, y: Int) -> Int = x + y\")"
---
add : Int → Int → Int
