crates/hird-check/tests/snapshots/inference__bool_is_an_adt.snap
---
source: crates/hird-check/tests/inference.rs
expression: "check_str(\"fn flip(b: Bool) -> Bool = match b {\\n\\\n           True -> False,\\n\\\n           False -> True,\\n\\\n         }\")"
---
flip : Bool → Bool
