crates/hird-check/tests/snapshots/inference__captured_monomorphic_binding_is_not_generalized.snap
---
source: crates/hird-check/tests/inference.rs
expression: "check_str(r#\"fn main() = \\x -> let y = x in (y(1), y(\"a\"))\"#)"
---
main : ∀a. a
error[C0001] 39..44: type mismatch: expected `Int`, got `String`
