crates/hird-check/tests/snapshots/inference__constructor_pattern_match.snap
---
source: crates/hird-check/tests/inference.rs
expression: "check_str(\"type Option<a> = Some(a) | None\\n\\\n         fn unwrap_or(opt: Option<Int>, default: Int) -> Int = match opt {\\n\\\n           Some(x) -> x,\\n\\\n           None -> default,\\n\\\n         }\")"
---
None : ∀a. Option<a>
Some : ∀a. a → Option<a>
unwrap_or : Option<Int> → Int → Int
