crates/hird-check/tests/snapshots/inference__crash_carries_no_effect_but_domain_errors_do.snap
---
source: crates/hird-check/tests/inference.rs
expression: "check_str(\"effect Exn<t>\\n\\\n         type ParseError = ParseError(String)\\n\\\n         fn recover(f: Int -> Int ! {Exn<ParseError>}) -> Int ! {Exn<ParseError>} = f(0)\\n\\\n         fn abort() -> Int = crash!(\\\"unrecoverable\\\")\")"
---
ParseError : String → ParseError
abort : () → Int
recover : (Int → Int ! {Exn<ParseError>}) → Int ! {Exn<ParseError>}
