crates/hird-check/tests/snapshots/inference__crash_fills_a_match_arm.snap
---
source: crates/hird-check/tests/inference.rs
expression: "check_str(\"type Option<a> = Some(a) | None\\n\\\n         fn unwrap(o: Option<Int>) -> Int = match o { Some(x) -> x, None -> crash!(\\\"empty\\\"), }\")"
---
None : ∀a. Option<a>
Some : ∀a. a → Option<a>
unwrap : Option<Int> → Int
